--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About Me
+title: Main
 ---
 
 <!DOCTYPE html>
@@ -37,10 +37,9 @@ title: About Me
   <div class="container">
     <img src="{{ '/main_photo.jpg' | relative_url }}" alt="Me" />
     <div class="text">
-      <h1>About Me</h1>
+      <h1>Welcome! </h1>
       <p>
-        This is some example text that will appear on the right side of the photo.
-        You can replace this with anything you want — a bio, description, or intro.
+        I am Hannah Bae, a first-year PhD student in Economics at the Universty of Rochester. My research focuses on macroeconomics. 
       </p>
     </div>
   </div>
