--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: About Me
 <body>
 
   <div class="container">
-    <img src="{{ '/main_photo.jpg' | relative_url }}" alt="Me" />
+    <img src="{{ 'assets/images/main_photo.jpg' | assets/images/main_photo.jpg }}" alt="Me" />
     <div class="text">
       <h1>Welcome! </h1>
       <p>
