--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ title: About Me
       border-radius: 8px;
     }
     .container .text {
-      max-width: 450px;
-      font-size: 0.9em;
+      max-width: 400px;
+      font-size: 1em;
       line-height: 1.5;
     }
   </style>
@@ -40,6 +40,8 @@ title: About Me
       <h1>Welcome! </h1>
       <p>
         I am Hannah Bae, a first-year PhD student in Economics at the Universty of Rochester. My research focuses on macroeconomics. 
+      
+        Scroll down to see my recent projects!      
       </p>
     </div>
   </div>
