--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: About Me
     <div class="text">
       <h1>Welcome! </h1>
       <p>
-        I am Hannah Bae, a first-year PhD student in Economics at the Universty of Rochester. My research focuses on macroeconomics. 
+        I am Hannah Bae, a first-year PhD student in economics at the Universty of Rochester. My research focuses on macroeconomics. 
       
         Scroll down to see my recent projects!      
       </p>
