--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ title: About Me
       max-width: 450px;
       font-size: 1em;
       line-height: 1.5;
+      font-family: Roboto;
     }
   </style>
 </head>
