--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Hannah Bae
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ page.title }}</title>
+  <title>{{ site.title }}</title>
   <link href="{{ '/css/override.css' | relative_url }}" rel="stylesheet" type="text/css" />
   <style>
     .container {
