--- a/research.html
+++ b/research.html
@@ -16,9 +16,17 @@ title: Research
   <main class="site-content" style="max-width: 900px; margin: 40px auto; padding: 0 20px;">
     <h1>Research</h1>
 
-
     <section>
-      <h2>Current Projects</h2>
+      <h2>Published Papers</h2>
+      <ol>
+        <li><em>Author Name</em>, Title of Paper 1, Journal Name, Year.</li>
+        <li><em>Author Name</em>, Title of Paper 2, Conference Name, Year.</li>
+        <li><em>Author Name</em>, Title of Paper 3, Journal Name, Year.</li>
+      </ol>
+    </section>
+    
+    <section>
+      <h2>Working Papers</h2>
       <ul>
         <li><strong>Project A:</strong> Description of project A, its goals, and status.</li>
         <li><strong>Project B:</strong> Brief summary of project B and collaborators.</li>
@@ -26,14 +34,15 @@ title: Research
       </ul>
     </section>
 
-    <section>
-      <h2>Selected Publications</h2>
-      <ol>
-        <li><em>Author Name</em>, Title of Paper 1, Journal Name, Year.</li>
-        <li><em>Author Name</em>, Title of Paper 2, Conference Name, Year.</li>
-        <li><em>Author Name</em>, Title of Paper 3, Journal Name, Year.</li>
-      </ol>
+   <section>
+        <h2>Work in Progress/h2>
+        <ul>
+          <li><strong>Project A:</strong> Description of project A, its goals, and status.</li>
+          <li><strong>Project B:</strong> Brief summary of project B and collaborators.</li>
+          <li><strong>Project C:</strong> Details about project C and outcomes.</li>
+        </ul>
     </section>
+
 
   </main>
 
