--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@ title: Research
     </section>
 
    <section>
-        <h2>Work in Progress/h2>
+        <h2>Work in Progress</h2>
         <ul>
           <li><strong>Project A:</strong> Description of project A, its goals, and status.</li>
           <li><strong>Project B:</strong> Brief summary of project B and collaborators.</li>
