--- a/CV.html
+++ b/CV.html
@@ -19,10 +19,10 @@ title: Curriculum Vitae
     <p>You can download or view my CV below:</p>
 
     <p>
-      <a href="{{ '/assets/files/cv.pdf' | relative_url }}" download>Download CV (PDF)</a>
+      <a href="{{ '/assets/attach/20231122_CV.pdf' | relative_url }}" download>Download CV (PDF)</a>
     </p>
 
-    <embed src="{{ '/assets/files/cv.pdf' | relative_url }}" type="application/pdf" width="100%" height="600px" />
+    <embed src="{{ '/assets/attach/20231122_CV.pdf.pdf' | relative_url }}" type="application/pdf" width="100%" height="600px" />
 
   </main>
 
