--- a/CV.html
+++ b/CV.html
@@ -22,7 +22,7 @@ title: CV
       <a href="{{ '/assets/attach/20231122_CV.pdf' | relative_url }}" download>Download CV (PDF)</a>
     </p>
 
-    <embed src="{{ '/assets/attach/20231122_CV.pdf.pdf' | relative_url }}" type="application/pdf" width="100%" height="600px" />
+    <embed src="{{ '/assets/attach/20231122_CV.pdf' | relative_url }}" type="application/pdf" width="100%" height="600px" />
 
   </main>
 
