--- a/CV.html
+++ b/CV.html
@@ -16,7 +16,7 @@ title: CV
   <main class="site-content" style="max-width: 900px; margin: 40px auto; padding: 0 20px;">
     <h1>Curriculum Vitae</h1>
 
-    <p>You can download or view my CV below:</p>
+    <p style="text-align: center;" >You can download or view my CV below:</p>
 
     <p>
       <a href="{{ '/assets/attach/20231122_CV.pdf' | relative_url }}" download>Download CV (PDF)</a>
