--- a/index.html
+++ b/index.html
@@ -48,5 +48,18 @@ title: Hannah Bae
     </div>
   </div>
 
+
+  <div class="container">
+    <div class="text">
+      <h1>Recent Projects </h1>
+      <h2>DSGE on two assets using DS (2010)</h2>
+      <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" />
+      <p>
+        This paper blah blah
+      </p>
+    </div>
+  </div>
+
+  
 </body>
 </html>
