--- a/index.html
+++ b/index.html
@@ -58,9 +58,20 @@ title: Hannah Bae
       </p>
      <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" />
     </div>
+
+
+
+    <div class="text">
+      <h2>DSGE on two assets using DS (2010)</h2>
+      <p>
+        This paper blah blah
+      </p>
+     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" />
+    </div>    
    
   </div>
 
+    
   
 </body>
 </html>
