--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ title: Hannah Bae
       <p>
         This paper blah blah
       </p>
-     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" />
+     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 600px; />
     </div>
 
 
@@ -66,7 +66,7 @@ title: Hannah Bae
       <p>
         This paper blah blah
       </p>
-     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" />
+     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 600px;/>
     </div>    
    
   </div>
