--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ title: Hannah Bae
       <p>
         This paper blah blah
       </p>
-     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 600px; />
+     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 600px"; />
       
       <h2>DSGE on two assets using DS (2010)</h2>
       <p>
         This paper blah blah
       </p>
-     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 600px;/>   
+     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 600px";/>   
   </div>
 
     
