--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Hannah Bae
     <div class="text">
       <h1>Welcome! </h1>
       <p>
-        I am Hannah Bae, a first-year PhD student in economics at the Universty of Rochester. My research focuses on macroeconomics. 
+        I am Hannah Bae, a first-year PhD student in economics at the Universty of Rochester. My research focuses on international trade and spatial economics. 
         <br>
         <br>
         Scroll down to see my recent projects!      
