--- a/index.html
+++ b/index.html
@@ -35,38 +35,28 @@ title: Hannah Bae
 </head>
 <body>
 
-  <div class="container">
-    <img src="{{ '/assets/images/main_photo.jpg' | /assets/images/main_photo.jpg }}" alt="Me" />
-    <div class="text">
-      <h1>Welcome! </h1>
-      <p>
-        I am Hannah Bae, a first-year PhD student in economics at the Universty of Rochester. My research focuses on international trade and spatial economics. 
-        <br>
-        <br>
-        Scroll down to see my recent projects!      
-      </p>
-    </div>
-  </div>
+<main class="main-section">
+  <!-- Left: Profile Info -->
+  <section class="profile-section">
+    <h1>Hannah Bae</h1>
+    <p>Ph.D. Student</p>
+    <p><strong>Email:</strong> hannah@example.com</p>
+    <p><strong>Affiliation:</strong> University of XYZ</p>
+    <p><strong>Address:</strong> City, Country</p>
+    <p><a href="/CV.html">See full CV ↓</a></p>
+  </section>
 
+  <!-- Right: Research Projects -->
+  <section class="research-section">
+    <h2>Recent Research Projects</h2>
+    <ul>
+      <li><strong>Project A</strong>: A short description of your recent work.</li>
+      <li><strong>Project B</strong>: Another highlight.</li>
+      <li><strong>Project C</strong>: Summary of a paper or ongoing research.</li>
+    </ul>
+  </section>
+</main>
 
-  <div class="container">
-    <div class="text">
-      <h1>Recent Projects </h1>
-      <h2>DSGE on two assets using DS (2010)</h2>
-      <p>
-        This paper blah blah
-      </p>
-     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 1500px"; />
-
-      <br>
-      <h2>DSGE on two assets using DS (2010)</h2>
-      <p>
-        This paper blah blah
-      </p>
-     <img src="{{ '/assets/images/irf.jpeg' | /assets/images/irf.jpeg }}" alt="Me" style="width: 1500px";/>   
-  </div>
-
-    
   
 </body>
 </html>
