--- a/index.html
+++ b/index.html
@@ -50,20 +50,17 @@
     <!-- Left side: Profile -->
     <section class="profile-section">
       <h1>Hannah Bae</h1>
-      <p>Ph.D. Student</p>
-      <p><strong>Email:</strong> hannah@example.com</p>
-      <p><strong>Affiliation:</strong> University of XYZ</p>
-      <p><strong>Address:</strong> City, Country</p>
-      <p><a href="/CV.html">See full CV ↓</a></p>
+      <p>University of Rochester</p>
+      <p><strong>Email:</strong> hbae6@ur.rochester.edu</p>
+      <p><a href="/CV.html">CV ↓</a></p>
     </section>
 
     <!-- Right side: Research -->
     <section class="research-section">
       <h2>Recent Research Projects</h2>
       <ul>
-        <li><strong>Project A:</strong> A short description of your recent work.</li>
-        <li><strong>Project B:</strong> Another highlight.</li>
-        <li><strong>Project C:</strong> Summary of a paper or ongoing research.</li>
+        <li><strong>Project A:</strong> Description goes here</li>
+
       </ul>
     </section>
   </main>
