--- a/index.html
+++ b/index.html
@@ -46,20 +46,28 @@
 </head>
 <body>
 
-  <main class="main-section">
-    <!-- Left side: Profile -->
-    <section class="profile-section">
-      <h1>Hannah Bae</h1>
-      <p>University of Rochester</p>
-      <p><strong>Email:</strong> hbae6@ur.rochester.edu</p>
-      <p><a href="/CV.html">CV ↓</a></p>
-    </section>
+ 
 
-    <!-- Right side: Research -->
-    <section class="research-section">
-      <h2>Recent Research Projects</h2>
-      <ul>
-        <li><strong>Project A:</strong> Description goes here</li>
+
+<main class="main-section" style="display: flex; min-height: 100vh; font-family: Roboto, sans-serif;">
+  <!-- Profile Section (Left) -->
+  <section style="flex: 1; padding: 60px 40px 60px 60px; background: #fff;">
+    <h1>Hannah Bae</h1>
+    <p>First year PhD student @ University of Rochster</p>
+    <p><strong>Email:</strong> hbae@ur.rochester.edu</p>
+    <p><a href="/CV.html">See full CV ↓</a></p>
+  </section>
+
+  <!-- Research Section (Right) -->
+  <section style="flex: 1; padding: 60px 20px 60px 30px; background: #d1d9d3;">
+    <h2>Recent Research Projects</h2>
+    <ul>
+      <li><strong>Project A:</strong> Description oes here.</li>
+
+    </ul>
+  </section>
+</main>
+
 
       </ul>
     </section>
