--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .main-section {
       display: flex;
       min-height: 100vh;
+      font-family: 'EudoxusSansEB';
     }
 
     .profile-section {
@@ -42,6 +43,15 @@
     .research-section h2 {
       margin-top: 0;
     }
+
+    .profile-photo {
+  width: 180px;           /* or any size you want */
+  height: 180px;
+  border-radius: 50%;     /* this makes it a perfect circle */
+  object-fit: cover;      /* ensures the image fills the circle */
+  border: 2px solid #ddd; /* optional: adds a light border */
+}
+
   </style>
 </head>
 <body>
