--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <main class="main-section" style="display: flex; min-height: 100vh; font-family: Roboto, sans-serif;">
   <!-- Profile Section (Left) -->
   <section style="flex: 1; padding: 60px 40px 60px 60px; background: #fff;">
-    <img src="{{ '/assets/images/main_photo.jpg' | relative_url }}" alt="Hannah Bae" class="profile-photo">
+    <img src="{{ '/assets/images/main_photo.jpg' | /assets/images/main_photo.jpg }}" alt="Hannah Bae" class="profile-photo">
     <h1>Hannah Bae</h1>
     <p>First year PhD student @ University of Rochster</p>
     <p><strong>Email:</strong> hbae@ur.rochester.edu</p>
