--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <img src="{{ '/assets/images/main_photo.jpg' | /assets/images/main_photo.jpg }}" alt="Hannah Bae" class="profile-photo">
     <h1>Hannah Bae</h1>
     <p>First year PhD student @ University of Rochster</p>
-    <p><strong>Email:</strong> hbae@ur.rochester.edu</p>
+    <p><strong>Email:</strong> hbae6@ur.rochester.edu</p>
     <p><a href="/CV.html">See full CV ↓</a></p>
   </section>
 
   <!-- Research Section (Right) -->
-  <section style="flex: 3; padding: 60px 20px 60px 30px; background: #d1d9d3;">
+  <section style="flex: 4; padding: 60px 20px 60px 30px; background: #d1d9d3;">
     <h2>Recent Research Projects</h2>
     <ul>
       <li><strong>Project A:</strong> Description oes here.</li>
