--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .main-section {
       display: flex;
       min-height: 100vh;
-      font-family: 'EudoxusSansEB';
+      font-family: 'EudoxusSansEB', sans-serif;
     }
 
     .profile-section {
@@ -63,7 +63,7 @@
   <!-- Profile Section (Left) -->
   <section style="flex: 1; padding: 60px 40px 60px 60px; background: #fff;">
     <img src="{{ '/assets/images/main_photo.jpg' | /assets/images/main_photo.jpg }}" alt="Hannah Bae" class="profile-photo">
-    <h1>Hannah Bae</h1>
+    <h1 style = "font-family: EudoxusSansEB, sans-serif;">Hannah Bae</h1>
     <p>First year PhD student @ University of Rochster</p>
     <p><strong>Email:</strong> hbae6@ur.rochester.edu</p>
     <p><a href="/CV.html">See full CV ↓</a></p>
